hydroflow/tests/compile-fail/surface_join_persistence_bad.stderr
error: Unknown lifetime generic argument `'a`, expected `'tick`, `'static`, or `'mut`.
 --> tests/compile-fail/surface_join_persistence_bad.rs:5:20
  |
5 |         j = join::<'a>() -> for_each(std::mem::drop);
  |                    ^^
